Everything except nbserverproxy seems to work
matplotlib 3.0.0 removed a feature used by Cartopy, so I specify using v2.2.3.
I also need to specify installing numpy to avoid getting a very old install.

cluster.scale() now expects the number of workers instead of the number of
nodes (and jobqueue.yaml is using 9 workers per node).

--- a/server-side/pangeo-cheyenne.yaml
+++ b/server-side/pangeo-cheyenne.yaml
@@ -6,9 +6,14 @@ channels:
 dependencies:
   - python=3
   - dask
+# To ensure our example notebook is consistent with jobqueue API, we
+# specify a version to use
   - dask-jobqueue=0.4.0
+  - numpy
   - xarray
   - jupyterlab
-  - matplotlib
+# matplotlib 3.0.0 doesn't work with Cartopy, so specify 2.2.3
+# see https://github.com/SciTools/cartopy/issues/1120 for details
+  - matplotlib=2.2.3
   - Cartopy
   - nbserverproxy
